--- a/chat.html
+++ b/chat.html
@@ -54,7 +54,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">
+                                    <a class="nav-link" href="more.html">
                                         <span> <img src="assets/images/moreoption.svg" class="img-fluid" alt="navbar_home" /> </span> More
                                     </a>
                                 </li>
@@ -79,7 +79,7 @@
         <!-- -------heading container - start -->
         <div class="container-fluid">
             <div class="row py-3">
-                <div class="col-12 pt-4">
+                <div class="col-12">
                     <h1 class="ft_3rem-s">Chat</h1>
                     <p class="ft_2rem-s">Send messages to other players.</p>
                 </div>
@@ -88,7 +88,7 @@
         <!-- ------heading container - end -->
 
         <!-- container for chat - start -->
-        <div class="container-fluid bg-white mt-5 br_47px-s">
+        <div class="container-fluid bg-white br_47px-s">
             <div class="row py-3">
                 <div class="col-12 min_h_340px-s">
                     <div class="row">
@@ -103,8 +103,8 @@
                             </div>
 
                             <div class="row d-flex justify-content-center">
-                                <div class="col-10 br_fg-s br_10px-s">
-                                    <div class="row border br_10px-s py-3 bg-greenish_grey-s">
+                                <div class="col-10 br_fg-s br_10px-s my-2">
+                                    <div class="row border br_10px-s py-1 bg-greenish_grey-s">
                                         <div class="col-3 col-md-3 col-lg-3 col-xl-3 align-self-center">
                                             <div class="profile_img-s">
                                                 <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
@@ -120,13 +120,115 @@
                                                 </div>
                                             </div>
                                             <div class="row">
-                                                <div class="col-12 px-0 mt-2">
+                                                <div class="col-12 ft_size_12px-s px-0 mt-2">
                                                     <p>Everyone is waiting.</p>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-3 col-md-3 col-lg-3 col-xl-3">
-                                            <div class="mt-3 text-center">
+                                            <div class="mt-3 ft_size_12px-s text-center">
+                                                <span>2 Hours</span>
+                                            </div>
+                                            <div class="message_count-s text-center ml-4">
+                                                <p class="fg_white-s mt-4 pt-2">2</p>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-10 br_fg-s br_10px-s my-2">
+                                    <div class="row border br_10px-s py-1 bg-greenish_grey-s">
+                                        <div class="col-3 col-md-3 col-lg-3 col-xl-3 align-self-center">
+                                            <div class="profile_img-s">
+                                                <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="col-6 col-md-6 col-lg-6 col-xl-6 px-0">
+                                            <div class="row">
+                                                <div class="col-12 px-0">
+                                                    <strong class="ft_17px-s fg_green-s">Thamer</strong>
+                                                </div>
+                                                <div class="col-12 px-0">
+                                                    <strong class="fg_lightgrey_s">@Thamermd</strong>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-12 ft_size_12px-s px-0 mt-2">
+                                                    <p>Everyone is waiting.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-3 col-md-3 col-lg-3 col-xl-3">
+                                            <div class="mt-3 ft_size_12px-s text-center">
+                                                <span>2 Hours</span>
+                                            </div>
+                                            <div class="message_count-s text-center ml-4">
+                                                <p class="fg_white-s mt-4 pt-2">2</p>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-10 br_fg-s br_10px-s my-2">
+                                    <div class="row border br_10px-s py-1 bg-greenish_grey-s">
+                                        <div class="col-3 col-md-3 col-lg-3 col-xl-3 align-self-center">
+                                            <div class="profile_img-s">
+                                                <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="col-6 col-md-6 col-lg-6 col-xl-6 px-0">
+                                            <div class="row">
+                                                <div class="col-12 px-0">
+                                                    <strong class="ft_17px-s fg_green-s">Thamer</strong>
+                                                </div>
+                                                <div class="col-12 px-0">
+                                                    <strong class="fg_lightgrey_s">@Thamermd</strong>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-12 ft_size_12px-s px-0 mt-2">
+                                                    <p>Everyone is waiting.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-3 col-md-3 col-lg-3 col-xl-3">
+                                            <div class="mt-3 ft_size_12px-s text-center">
+                                                <span>2 Hours</span>
+                                            </div>
+                                            <div class="message_count-s text-center ml-4">
+                                                <p class="fg_white-s mt-4 pt-2">2</p>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-10 br_fg-s br_10px-s my-2">
+                                    <div class="row border br_10px-s py-1 bg-greenish_grey-s">
+                                        <div class="col-3 col-md-3 col-lg-3 col-xl-3 align-self-center">
+                                            <div class="profile_img-s">
+                                                <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="col-6 col-md-6 col-lg-6 col-xl-6 px-0">
+                                            <div class="row">
+                                                <div class="col-12 px-0">
+                                                    <strong class="ft_17px-s fg_green-s">Thamer</strong>
+                                                </div>
+                                                <div class="col-12 px-0">
+                                                    <strong class="fg_lightgrey_s">@Thamermd</strong>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-12 ft_size_12px-s px-0 mt-2">
+                                                    <p>Everyone is waiting.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-3 col-md-3 col-lg-3 col-xl-3">
+                                            <div class="mt-3 ft_size_12px-s text-center">
                                                 <span>2 Hours</span>
                                             </div>
                                             <div class="message_count-s text-center ml-4">
@@ -142,11 +244,123 @@
 
                         <!-- ----- chat room - start ----- -->
                         <div class="col-8 col-md-8 col-lg-8 col-xl-8 border border-top-0">
-                            <div class="row">
-                                <div class="col">
 
+                            <!-- profile detail of next person in chat - start -->
+                            <div class="row">
+                                <div class="col-12 border-bottom">
+                                    <div class="row pb-3">
+                                        <div class="col-10 d-flex">
+                                            <div class="profile_img-s d-flex justify-content-between">
+                                                <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                            </div>
+                                            <div class="ml-3 align-self-center">
+                                                <strong class="ft_17px-s fg_green-s">Thamer</strong>
+                                                <p class="fg_darkgrey_s">@Thamermd</p>
+                                            </div>
+                                        </div>
+                                        <div class="col-2 text-right align-self-center">
+                                            <a href="javascript:void(0)">
+                                                <img class="mr-4" src="assets/images/delete_icon.svg" alt="">
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
+                            <!-- profile detail of next person in chat - end -->
+
+                            <!-- chat room -start -->
+
+                            <!-- timeline of chat -->
+                            <div class="row">
+                                <div class="col-12 d-flex justify-content-center ft_12px-s mt-3">
+                                    <span class=""> Today <span>01/01/21</span> </span>
+                                </div>
+                            </div>
+                            <!-- timeline of chat -->
+
+                            <!-- next person in chat -->
+
+                            <div class="row py-3">
+                                <div class="col-1 px-0 align-self-end">
+                                    <div class="profile_img_in_chat-s ml-5">
+                                        <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="col-4 py-2 br_10x10-s ft_size_12px-s bg-greenish_grey-s word-break word-wrap">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
+                                    </p>
+                                </div>
+                                <div class="col-xl-8 col-lg-8 col-md-8 col-8 pl-0 offset-lg-1 offset-xl-1 offset-md-2">
+                                    <span class="ft_12px-s ml-3 ml-lg-4 ml-xl-2"> 12:43 pm</span>
+                                </div>
+                                <div class="col-7"></div>
+                            </div>
+                            <!-- next person in chat -->
+
+                            <!-- first person in chat -->
+
+                            <div class="row py-3">
+                                <div class="col-7"></div>
+                                <div class="col-4 py-2 br_10px10px-s ft_size_12px-s fg_white-s bg_green-s word-break word-wrap">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
+                                    </p>
+                                </div>
+                                <div class="col-1 px-0 align-self-end">
+                                    <div class="profile_img_in_chat-s ml-4">
+                                        <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="col-12 pr-0 text-right">
+                                    <span class="ft_12px-s"> 12:43 pm</span>
+                                </div>
+                            </div>
+                            <!-- first person in chat -->
+
+                            <!-- next person in chat -->
+
+                            <div class="row py-3">
+                                <div class="col-1 px-0 align-self-end">
+                                    <div class="profile_img_in_chat-s ml-5">
+                                        <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="col-4 py-2 br_10x10-s ft_size_12px-s bg-greenish_grey-s word-break word-wrap">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
+                                    </p>
+                                </div>
+                                <div class="col-xl-8 col-lg-8 col-md-8 col-8 pl-0 offset-lg-1 offset-xl-1 offset-md-2">
+                                    <span class="ft_12px-s ml-3 ml-lg-4 ml-xl-2"> 12:43 pm</span>
+                                </div>
+                                <div class="col-7"></div>
+                            </div>
+                            <!-- next person in chat -->
+
+                            <!-- first person in chat -->
+
+                            <div class="row py-3">
+                                <div class="col-7"></div>
+                                <div class="col-4 py-2 br_10px10px-s ft_size_12px-s fg_white-s bg_green-s word-break word-wrap">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
+                                    </p>
+                                </div>
+                                <div class="col-1 px-0 align-self-end">
+                                    <div class="profile_img_in_chat-s ml-4">
+                                        <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- first person in chat -->
+
+                            <!-- chat input - start -->
+                            <div class="input-group word-break word-wrap my-4">
+                                <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control py-2 br_10px-s textarea_h_w-s ft_size_14px-s border-0 shadow" id="simple-chat-message"></textarea>
+                                <div class="input-group-append">
+                                    <a class="" href="javascript:void(0)"><img src="assets/images/chat_send_icon.svg" alt=""></a>>
+                                </div>
+                            </div>
+                            <!-- chat input - end -->
+                            <!-- chat room - end -->
+
                         </div>
                         <!-- ----- chat room - end ----- -->
                     </div>
