--- a/football_login1.html
+++ b/football_login1.html
@@ -40,11 +40,11 @@
                             </li>
                             <!--about-->
                             <li class="nav-item px-xl-5 px-3">
-                                <a class="nav-link text-white fs_19px-s green_bottom_on_hover-s pl-0" href="javascript:void(0)">About</a>
+                                <a class="nav-link text-white fs_19px-s green_bottom_on_hover-s pl-0" href="about_us.html">About</a>
                             </li>
                             <!--contacts-->
                             <li class="nav-item px-xl-5 px-3">
-                                <a class="nav-link text-white fs_19px-s green_bottom_on_hover-s pl-0" href="javascript:void(0)">Contacts</a>
+                                <a class="nav-link text-white fs_19px-s green_bottom_on_hover-s pl-0" href="about_us.html">Contacts</a>
                             </li>
                         </ul>
                     </div>
