--- a/game_invitation.html
+++ b/game_invitation.html
@@ -60,7 +60,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">
+                                    <a class="nav-link" href="more.html">
                                         <span> <img src="assets/images/moreoption.svg" class="img-fluid" alt="navbar_home" /> </span> More
                                     </a>
                                 </li>
